Wed Dec 13 21:30:39 2006  Tim Janik  <timj@gtk.org>

	* bseenginemaster.c (master_take_probes): fixup ostreams[].value 
	pointers before returning a probe, since those may have been altered
	by process() routines.

	* bseprobe.cc: added debugging field and a few assertions.

Tue Dec 12 08:50:45 2006  Tim Janik  <timj@gtk.org>

	* bseundostack.c: fix possible flat copies of pointers to deeply
	nested object structures. in particular, this fixes potential GSList
	node corruptions.

Tue Dec 12 01:18:22 2006  Tim Janik  <timj@gtk.org>

	* bsecore.idl, bsemathsignal.c: added musical tuning system tables 
	submitted by Hanno Behrens <pebbles@schattenlauf.de>:
	12-TET, 7-TET, 5-TET, DIATONIC_SCALE, INDIAN_SCALE, PYTHAGOREAN_TUNING,
	PENTATONIC_5_LIMIT, PENTATONIC-BLUES, PENTATONIC-GOGO,
	QUARTER_COMMA_MEANTONE, SILBERMANN_SORGE, WERCKMEISTER_3,
	WERCKMEISTER_4, WERCKMEISTER_5, WERCKMEISTER_6, KIRNBERGER_3
	and YOUNG.

Mon Dec 11 00:51:36 2006  Tim Janik  <timj@gtk.org>

	* bsesong.[hc]: added musical_tuning property. 

	* bseutils.h, bseutils.c:
	* bsenote.h, bsenote.c, bsenote.cc: converted bsenote to C++. added musical
	tuning argument to all note/freq API functions and adapted internal logic
	to cope with different tunings. removed unused BSE_FREQ*() macros.

	* bsecore.idl: introduce Bse::MusicalTuningType. added musical_tuning 
	field to NoteDescription.

	* bseserver.proc:
	* bseprocedure.proc: added musical tuning arguments to various note 
	related procedures, moved note procedures from bseserver.proc to
	bseprocedure.proc and got rid of their BseServer argument.

	* bsemathsignal.h, bsemathsignal.c: made semitone and transpose tables
	musical tuning sensitive.

	* bsepart.[hc]: allow per-part semitone tables, and changed macros so that
	part notes are converted to frequencies according to the musical tuning
	specific to a part.

	* bseitem.[hc]: provide bse_item_current_musical_tuning() and document
	its caveats.
